--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -9,7 +9,7 @@ ruoyi:
   # 实例演示开关
   demoEnabled: true
   # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
-  profile: D:/ruoyi/uploadPath
+  profile: /Users/yueyue.liu/Documents/GitHub/RuoYi-Vue/uploadPath
   # 获取ip地址开关
   addressEnabled: false
   # 验证码类型 math 数组计算 char 字符验证
@@ -70,7 +70,7 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: localhost
+    host: 10.211.55.21
     # 端口，默认为6379
     port: 6379
     # 数据库索引
